--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    p {
+        @apply mb-3;
+    }
+    a {
+        @apply text-pink-700;
+        @apply hover:underline;
+    }
+    code {
+        @apply text-sm;
+    }
+}
