--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,6 @@
 @tailwind utilities;
 
 @layer base {
-    body {
-        @apply bg-gray-50;
-    }
     p {
         @apply mb-3;
     }
@@ -17,6 +14,7 @@
     }
     a {
         @apply text-pink-700;
+        @apply dark:text-pink-500;
         @apply hover:underline;
     }
     code {
